--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dynamic = ["version", "description"]
 [project.optional-dependencies]
 doc = [
     "sphinx==4.2.0",
+    "rst-to-myst==0.3.2",
+    "myst-parser==0.18.0"
 ]
