--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,7 @@ dynamic = ["version", "description"]
 doc = [
     "sphinx==4.2.0",
     "rst-to-myst==0.3.2",
-    "myst-parser==0.18.0"
+    "myst-parser==0.18.0",
+    "sphinx-autobuild==2021.3.14",
+    
 ]
